# fastapi-nextjs-app

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b16d0495409_change_booking_table.py  e744b09ad211_add_price_columns_to_cars_table.py  f07c80efa713_create_initial_tables.py
backend/app/: main.py
backend/app/core/: config.py  hash.py
backend/app/cruds/: admin.py  booking.py  car.py  user.py
backend/app/db/: db.py
backend/app/models/: admin.py  booking.py  car.py  user.py
backend/app/routers/: admin.py  booking.py  car.py  test.py
backend/app/schemas/: admin.py  booking.py  car.py  user.py
backend/app/services/: auth_service.py  mail_service.py  stripe_service.py
backend/app/templates/email/: approval_notice.html  cancel_notice.html  email.html
backend/app/types/: status.py
backend/app/validators/: booking_validator.py
backend/tests/: conftest.py
backend/tests/routers/: test_admin.py  test_booking.py  test_car.py
frontend/: package.json
frontend/src/api/: booking.ts
frontend/src/app/: page.tsx
frontend/src/components/: BookingForm.tsx
frontend/src/features/booking/components/: BookingForm.tsx
frontend/src/features/booking/hooks/: useBookingForm.ts  useFetchCars.ts
frontend/src/tests/features/booking/hooks/: useBookingForm.test.ts
frontend/src/tests/features/booking/utils/: calculate.test.ts
frontend/src/types/: booking.ts
